[package]
name = "geekp"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.2.1"
rand = "0.8.5"

[[bin]]
name = "chapter_1"
path = "src/chapter_1.rs"

[[bin]]
name = "chapter_2"
path = "src/chapter_2.rs"

[[bin]]
name = "chapter_3"
path = "src/chapter_3/main.rs"

[[bin]]
name = "chapter_4"
path = "src/chapter_4/main.rs"

[[bin]]
name = "chapter_5"
path = "src/chapter_5/main.rs"
